--- a/index.html
+++ b/index.html
@@ -13,43 +13,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <!-- font awesome link -->
     <script src="https://kit.fontawesome.com/59c032d6c4.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <!-- MAIN SECTION -->
     <!-- NAV BAR -->
-    <section class="main-section">
+    <section class="main-section" id="main-section">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Before/After</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#main-section">Home</a></li>
+                <li><a href="#section2">About</a></li>
+                <li><a href="#section3">Portfolio</a></li>
+                <li><a href="#section4">Before/After</a></li>
             </ul>
         </nav>
         <div>
             <h1>JC Properties & Construction</h1>
-            <span>Welcome to PAGE</span>
+            <span>Specializing in Interior Remodeling & Patio Builds </span>
         </div>
     </section>
-    <!-- Grid Portfolio -->
-    <section class="section2">
+    <!-- ABOUT/SECTION 2 -->
+    <section class="section2" id="section2">
+        <h2>About Us</h2>
+        <div>
+            <div class="S2image">
+                <img src="#" alt="photo here">
+            </div>
+            <div class="S2word">
+                In 2001, Contractor Joel Cantoran first established JC Properties and Construction, since then has been servicing 
+                the greater Chicago area and suburbs. With more than 20+ years of experience, JC Properties & Construction has always made 
+                customer satifaction a priority. We have worked with a variety of clients including first time buyer to working in
+                partnership with the City of Chicago. Although JC properties & construction specializes in remodeling and patio builds
+                WORK ON TOMORROW
+            </div>
+        </div>
+    </section>
+    <!-- PORTFOLIO/ SECTION 3 -->
+    <section class="section3" id="section3">
         <h2>Portfolio</h2>
-        <span>check out</span>
+        <p>Patios</p>
+        <div class="patio">
+            <img class="image-grid-col-2" src="patio5.png">
+            <img class="image-grid-col-2 image-grid-row-2"src="patio2.png">
+            <img class="image-grid-col-2 image-grid-row-2" src="patio1.png">
+            <img class="image-grid-col-2" src="patio4.png">
+        </div>
+        <p>Interiors</p>
+        <div class="interior">
+            <img class="image-grid-col-2 image-grid-row-2" src="flooring1.png">
+            <img class="image-grid-col-2" src="kitchen1.png">
+            <img class="image-grid-col-2" src="stairs.png">
+        </div>
+    </section>
+    <!-- BEFORE & AFTER/SECTION 4 -->
+    <section class="section4" id="section4">
+        <h2>Before & After</h2>
+        <div>Coming Soon...</div>
     </section>
     <!-- Footer -->
     <footer class="footer">
-        <div>
+        <div class="firstdiv">
             <h3>JC Properties & Construction</h3>
             <span>
                 <i class="fa-brands fa-facebook-square"></i>
                 <i class="fa-brands fa-instagram"></i>
             </span>
         </div>
-        <div>
+        <div class="seconddiv"><i class="fa-regular fa-copyright"></i>2022 COL+LABS </div>
+        <div class="footer-list">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Before/After</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#main-section">Home</a></li>
+                <li><a href="#section2">About</a></li>
+                <li><a href="#section3">Portfolio</a></li>
+                <li><a href="#section4">Before/After</a></li>
             </ul>
         </div>
     </footer>
