--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
     <!-- NAV BAR -->
     <section class="main-section" id="main-section">
         <nav>
-            <ul>
-                <li><a href="#main-section">Home</a></li>
-                <li><a href="#section2">About</a></li>
-                <li><a href="#section3">Portfolio</a></li>
-                <li><a href="#section4">Before/After</a></li>
-            </ul>
+            <div class="openMenu"><i class="fa fa-bars"></i></div>
+            <div class="mainMenu">
+                <ul>
+                    <li><a class="firstli" href="#main-section">Home</a></li>
+                    <li><a class="secondli" href="#section2">About</a></li>
+                    <li><a class="thirdli" href="#section3">Portfolio</a></li>
+                    <li><a class="fourthli" href="#section4">Before/After</a></li>
+                    <div class="closeMenu"><i class="fa fa-times"></i></div>
+                </ul>
+            </div>
         </nav>
         <div>
             <h1>JC Properties & Construction</h1>
@@ -40,11 +44,12 @@
                 <img src="#" alt="photo here">
             </div>
             <div class="S2word">
-                In 2001, Contractor Joel Cantoran first established JC Properties and Construction, since then has been servicing 
-                the greater Chicago area and suburbs. With more than 20+ years of experience, JC Properties & Construction has always made 
-                customer satifaction a priority. We have worked with a variety of clients including first time buyer to working in
-                partnership with the City of Chicago. Although JC properties & construction specializes in remodeling and patio builds
-                WORK ON TOMORROW
+                In 2001, contractor Joel Cantoran first established JC Properties and Construction. With more than 20+ years experience 
+                servicing the Chicago-land area, JC Properties & Construction has consistently made customer satisfaction 
+                top priority. In addition to exceptional customer service, JC Properties and Construction has 
+                expertise in all areas of home improvement and has worked with a variety of clients 
+                including first time home buyers, investors and partnerships with the City of chicago. No matter the size, speciality,
+                or whether its a multi-unit investment property or your own home, JC Properties and Construction can get it all done. 
             </div>
         </div>
     </section>
@@ -89,5 +94,7 @@
             </ul>
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
