--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a class="secondli" href="#section2">About</a></li>
                     <li><a class="thirdli" href="#section3">Portfolio</a></li>
                     <li><a class="fourthli" href="#section4">Before/After</a></li>
+                    <li><a class="fifthli" href="#section5">Contact Us</a></li>
                     <div class="closeMenu"><i class="fa fa-times"></i></div>
                 </ul>
             </div>
@@ -40,9 +41,6 @@
     <section class="section2" id="section2">
         <h2>About Us</h2>
         <div>
-            <div class="S2image">
-                <img src="#" alt="photo here">
-            </div>
             <div class="S2word">
                 In 2001, contractor Joel Cantoran first established JC Properties and Construction. With more than 20+ years experience 
                 servicing the Chicago-land area, JC Properties & Construction has consistently made customer satisfaction 
@@ -75,6 +73,14 @@
         <h2>Before & After</h2>
         <div>Coming Soon...</div>
     </section>
+    <!-- CONTACT -->
+    <section class="section5" id="section5">
+        <h2>Contact Us</h2>
+        <div>
+            <span>Call us & schedule a consultation</span>
+            <div>1(630) 520 - 8551 </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer class="footer">
         <div class="firstdiv">
@@ -91,6 +97,7 @@
                 <li><a href="#section2">About</a></li>
                 <li><a href="#section3">Portfolio</a></li>
                 <li><a href="#section4">Before/After</a></li>
+                <li><a href="#section5">Contact Us</a></li>
             </ul>
         </div>
     </footer>
